---------------------------------------------------------------------------------------------------
Version: 0.3.22
Date: 2025-07-04
  Bugfixes:
    - Fixed crushing stibnite icon
    - Fixed that alloy forge did not have concrete as prerequisite
    - Holmium crushing is now unlocked in holmium processing (before in cerium processing)
---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2025-06-27
  Features:
    - Added bromine recipe chain
    - Added chemicals for processing aseroids
  Changes:
    - Rhodium asteroid chunks now spawn around nauvis
    - Removed heavy gearbox from big mining drill recipe
  Bugfixes:
    - Fixed that explosives could be unlocked without having to unlock assembling-machine-2 since explosive require fluids to be crafted
    - Fixed that potassium permanganate solution could be unlocked without unlocking magnesium processing
---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2025-06-20
  Changes:
    - Removed recipe insulated wire from aluminum
    - Removed recipe turbine blade from titanium aluminum tin and renamed turbine blade from steel recipe to be turbine blade like the item. (you will have to select again the recipe of the assembling machine)
    - Removed some capacitor recipes and kept the capacitor from aluminum recipe and renamed recipe to capacitor (you will have to select again the recipe of the assembling machine)
  Bugfixes:
    - Fixed some asteroid chunks not spawning correctly
    - Fixed power from solar panels in space for asteroids
    - Fixed CMOS recipe was not craftable at its location in tech tree
    - Fixed space science pack recipe chain
---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 2025-06-13
  Features:
    - Added asteroids as new space locations for acquiring minerals
  Changes: