@@ -838,26 +838,6 @@ data.raw.technology["low-density-structure-productivity"].unit.ingredients = {
   {"utility-science-pack", 1},
 }
 
-data.raw.technology["scrap-recycling-productivity"].prerequisites = {
-  "sp-material-science-pack-3",
-}
-data.raw.technology["scrap-recycling-productivity"].unit.ingredients = {
-  {"sp-automation-science-pack-3", 1},
-  {"sp-logistic-science-pack-3", 1},
-  {"sp-material-science-pack-3", 1},
-  {"sp-geological-science-pack-2", 1},
-  {"sp-electronic-science-pack-2", 1},
-  {"sp-chemical-science-pack-2", 1},
-  {"production-science-pack", 1},
-  {"sp-metallurgic-science-pack-2", 1},
-  {"sp-electromagnetic-science-pack-2", 1},
-  {"agricultural-science-pack", 1},
-  {"cryogenic-science-pack", 1},
-  {"sp-computer-science-pack-2", 1},
-  {"space-science-pack", 1},
-  {"utility-science-pack", 1},
-}
-
 data.raw.technology["processing-unit-productivity"].prerequisites = {
   "sp-computer-science-pack-3",
 }
