@@ -282,6 +282,7 @@ Features:
   - For items and fluids add to icon chemical formula and add picture without chemical formula (such that when item is on conveyor belt text does not show up). Also try to add this feature for barrels.
   - Add back blunagium, grobgnum, rukite and yemnuth rockets
   - See metal and stars mod https://mods.factorio.com/mod/metal-and-stars https://youtu.be/8pGgnDISc78?si=H3ddFWEihf-NK_A1&t=912
+  - Do recycling - lol
 
 Scripting:
   - Acrospheres (for version 0.4.0 or higher)
